--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -19,6 +19,8 @@
       href: functions-create-first-java-maven.md
     - name: Skapa funktion – Python
       href: functions-create-first-function-python.md
+    - name: Skapa funktion – PowerShell
+      href: functions-create-first-function-powershell.md
     - name: 'Skapa funktion: Azure CLI'
       href: functions-create-first-azure-function-azure-cli.md
     - name: 'Skapa funktion: portal'
@@ -39,7 +41,9 @@
       items:
         - name: Azure Cosmos DB
           href: functions-integrate-store-unstructured-data-cosmosdb.md
-        - name: Storage
+        - name: Storage – Python
+          href: functions-add-output-binding-storage-queue-python.md
+        - name: Storage – portalen
           href: functions-integrate-storage-queue-output-binding.md
 - name: Självstudier
   items:
@@ -100,6 +104,8 @@
           href: functions-reference-node.md
         - name: Java
           href: functions-reference-java.md
+        - name: PowerShell
+          href: functions-reference-powershell.md
         - name: Python
           href: functions-reference-python.md
     - name: Diagnostik
@@ -134,6 +140,8 @@
           href: functions-create-maven-eclipse.md
         - name: Skapa en Linux-funktionsapp
           href: create-function-app-linux-app-service-plan.md
+        - name: Felsöka lokala PowerShell-funktioner
+          href: functions-debug-powershell-local.md
         - name: Hantera anslutningar
           href: manage-connections.md
         - name: Felhantering
@@ -148,6 +156,8 @@
       items:
         - name: Kontinuerlig distribution
           href: functions-continuous-deployment.md
+        - name: Skapa och distribuera via Azure Pipelines
+          href: functions-how-to-azure-devops.md
         - name: Distribuera ZIP-filer
           href: deployment-zip-push.md
         - name: Kör från paketet
