--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -5,13 +5,13 @@
   expanded: false
   items:
     - name: Avancerad hotidentifiering
-      displayName: 'vulnerability, virus, ids, incident'
+      displayName: 'vulnerability, virus, IDs, incident'
       href: azure-threat-detection.md
     - name: Loggning och granskning i Azure
       displayName: incident
       href: azure-log-audit.md
     - name: Azure-nätverkssäkerhet
-      displayName: 'firewall, ssl, vpn, ids, gateway, https, application gateway, azure application gateway, ips, waf'
+      displayName: 'firewall, ssl, vpn, IDs, gateway, https, application gateway, azure application gateway, ips, waf'
       href: abstract-azure-network-security.md
     - name: Säkerhet för Azure-plattform utan server
       href: abstract-serverless-platform-security.md
@@ -50,7 +50,7 @@
         - name: Diskkryptering för virtuella IaaS-datorer
           items:
             - name: Om Azure Disk Encryption
-              displayName: 'bitlocker, bek'
+              displayName: 'Bitlocker, bek'
               href: azure-security-disk-encryption-overview.md
             - name: Snabbstarter
               items:
@@ -141,7 +141,7 @@
           displayName: identity
           href: azure-security-global-admin.md
     - name: Nätverkssäkerhet
-      displayName: 'firewall, ssl, vpn, ids, gateway, https, azure application gateway, application gateway, ips, waf'
+      displayName: 'firewall, ssl, vpn, IDs, gateway, https, azure application gateway, application gateway, ips, waf'
       href: security-network-overview.md
       items:
         - name: Bästa praxis
@@ -270,6 +270,11 @@
           href: ./blueprints/pcidss-iaaswa-overview.md
         - name: PaaS-webbprogram
           href: ./blueprints/pcidss-paaswa-overview.md
+    - name: SCCA
+      displayName: 'blueprint, privacy, certifications'
+      items:
+        - name: Skydda Azures databehandlingsarkitektur
+          href: ./compliance/secure-azure-computing-architecture.md
     - name: Betrodd Internetanslutning
       displayName: 'blueprint, privacy, certifications'
       items:
@@ -327,13 +332,13 @@
         - name: Versioner
           href: azure-security-threat-modeling-tool-releases.md
           items:
-            - name: 'Threat Modeling Tool, allmän tillgänglighet för version 7.1.5091.2 – 2018-09-12'
+            - name: Threat Modeling Tool GA-version 7.1.5091.2 – 12 sept. 2018
               href: azure-security-threat-modeling-tool-releases-71509112.md
-            - name: 'Threat Modeling Tool, uppdaterad version 7.1.51023.1 – 2018-11-01'
+            - name: Threat Modeling Tool GA-uppdateringsversion 7.1.51023.1 – 1 nov. 2018
               href: azure-security-threat-modeling-tool-releases-71510231.md
-            - name: 'Threat Modeling Tool, uppdaterad version 7.1.60126.1 – 2019-01-29'
+            - name: "Threat Modeling Tool-uppdateringsversion 7.1.60126.1\_–\_29 jan. 2019"
               href: azure-security-threat-modeling-tool-releases-71601261.md
-            - name: 'Threat Modeling Tool, uppdaterad version 7.1.60408.1 – 2019-04-09'
+            - name: "Threat Modeling Tool-uppdateringsversion 7.1.60408.1\_–\_9 april 2019"
               href: azure-security-threat-modeling-tool-releases-71604081.md
         - name: Åtgärder
           href: azure-security-threat-modeling-tool-mitigations.md
