--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -56,6 +56,8 @@
           href: active-directory-b2c-overview-custom.md
         - name: Användaråtkomst
           href: manage-user-access.md
+    - name: JavaScript och sidkontrakt
+      href: user-flow-javascript-overview.md
     - name: OAuth 2.0
       href: active-directory-b2c-reference-oauth-code.md
     - name: OpenId Connect
@@ -70,8 +72,6 @@
       href: manage-user-data.md
     - name: Användarflöden
       href: active-directory-b2c-reference-policies.md
-    - name: Användarflöden med JavaScript
-      href: user-flow-javascript-overview.md
     - name: Anpassning av användargränssnitt
       href: customize-ui-overview.md
 - name: Instruktionsguider
