--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -1,26 +1,57 @@
-- name: Dokumentation om styrning av Azure AD-identiteter
+- name: Azure AD Identity Governance-dokumentation
   href: index.yml
 - name: Översikt
-  expanded: false
+  expanded: true
   items:
-    - name: Vad är identitetsstyrning?
+    - name: Vad är Identity Governance?
       href: identity-governance-overview.md
+    - name: Vad är berättigandehantering? (Förhandsversion)
+      href: entitlement-management-overview.md
     - name: Vad är åtkomstgranskningar?
       href: access-reviews-overview.md
-- name: Begrepp
-  expanded: false
+- name: Självstudier
+  expanded: true
   items:
-    - name: Hantera gäståtkomst med granskningar
-      href: manage-guest-access-with-access-reviews.md
-    - name: Hantera användaråtkomst med granskningar
-      href: manage-user-access-with-access-reviews.md
-    - name: Hantera program och deras kontroller
-      href: manage-programs-controls.md
-    - name: Hantera användare som undantagits från villkorsstyrd åtkomst
-      href: conditional-access-exclusion.md
+    - name: Skapa ditt första åtkomstpaket
+      href: entitlement-management-access-package-first.md
+- name: Begrepp
+  expanded: true
+  items:
+    - name: Berättigandehantering
+      items:
+        - name: Process för begäran och e-postmeddelanden
+          href: entitlement-management-process.md
+    - name: Åtkomstgranskningar
+      items:
+        - name: Hantera gäståtkomst med granskningar
+          href: manage-guest-access-with-access-reviews.md
+        - name: Hantera användaråtkomst med granskningar
+          href: manage-user-access-with-access-reviews.md
+        - name: Hantera program och deras kontroller
+          href: manage-programs-controls.md
+        - name: Hantera användare som undantagits från villkorsstyrd åtkomst
+          href: conditional-access-exclusion.md
 - name: Instruktionsguider
   expanded: true
   items:
+    - name: Berättigandehantering
+      items:
+        - name: Vanliga scenarier
+          href: entitlement-management-scenarios.md
+        - name: Skapa ett nytt åtkomstpaket
+          href: entitlement-management-access-package-create.md
+        - name: Redigera ett åtkomstpaket
+          href: entitlement-management-access-package-edit.md
+        - name: Skapa en katalog
+          href: entitlement-management-catalog-create.md
+        - name: Begär åtkomst
+          href: entitlement-management-request-access.md
+        - name: Godkänn förfrågningar
+          href: entitlement-management-request-approve.md
+        - name: Visa rapporter och loggar
+          href: entitlement-management-reports.md
+        - name: Felsöka
+          href: entitlement-management-troubleshoot.md
     - name: Åtkomstgranskningar
       items:
         - name: Grupper och appar
