--- a/articles/active-directory/governance/index.yml
+++ b/articles/active-directory/governance/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Dokumentation om styrning av Azure AD-identiteter
+title: Azure AD Identity Governance-dokumentation
 metadata:
   document_id: null
-  title: Dokumentation om styrning av Azure AD-identiteter | Microsoft Docs
+  title: Dokumentation om Azure Active Directory Identity Governance | Microsoft Docs
   description: 'Läs mer om styrning av identitetslivscykler, styrning av åtkomstlivscykler och säker administration för både anställda och partner.'
   services: active-directory
   author: rolyon
@@ -12,10 +12,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 08/16/2018
+  ms.date: 04/18/2019
   ms.author: rolyon
 abstract:
-  description: Med identitetsstyrning i Azure Active Directory (Azure AD) kan organisationer styra identitetslivscykler och åtkomstlivscykler samt skydda administrationsprocesserna för anställda och partner.
+  description: Med Azure Active Directory (Azure AD) Identity Governance får organisationer möjlighet att styra identiteternas livscykel och åtkomstslivscykeln samt skydda administrationen mellan anställda och partner.
   aside:
     image:
       alt: null
@@ -26,23 +26,31 @@ abstract:
     href: 'https://www.youtube.com/embed/aY7A0Br8u5M'
     width: 200
 sections:
-  - title: Identitetsstyrning
+  - title: Identity Governance
     items:
       - type: list
         style: unordered
         items:
-          - html: <a href="/azure/active-directory/governance/identity-governance-overview">Vad är identitetsstyrning?</a>
+          - html: <a href="/azure/active-directory/governance/identity-governance-overview">Vad är Identity Governance?</a>
+  - title: Berättigandehantering (förhandsversion)
+    items:
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/governance/entitlement-management-overview">Vad är berättigandehantering i Azure AD?</a>
+          - html: <a href="/azure/active-directory/governance/entitlement-management-access-package-first">Självstudier – skapa ditt första åtkomstpaket</a>
+          - html: <a href="/azure/active-directory/governance/entitlement-management-access-package-edit">Redigera och hantera ett befintligt åtkomstpaket</a>
   - title: Åtkomstgranskningar
     items:
       - type: list
         style: unordered
         items:
-          - html: <a href="/azure/active-directory/governance/access-reviews-overview">Vad är en åtkomstgranskning?</a>
-          - html: <a href="/azure/active-directory/governance/manage-user-access-with-access-reviews">Hantera användaråtkomst med åtkomstgranskningar</a>
-          - html: <a href="/azure/active-directory/governance/manage-guest-access-with-access-reviews">Hantera gäståtkomst med åtkomstgranskningar</a>
+          - html: <a href="/azure/active-directory/governance/access-reviews-overview">Vad är Azure AD-åtkomstgranskningar?</a>
+          - html: <a href="/azure/active-directory/governance/create-access-review">Skapa en åtkomstgranskning av grupper eller appar</a>
+          - html: <a href="/azure/active-directory/governance/perform-access-review">Granska åtkomst till gruppen eller appar</a>
   - title: Användningsvillkor
     items:
       - type: list
         style: unordered
         items:
-          - html: <a href="/azure/active-directory/conditional-access/terms-of-use">Vad kan jag göra med användningsvillkoren?</a>
+          - html: <a href="/azure/active-directory/conditional-access/terms-of-use">Krävs användningsvillkor?</a>
