--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -129,6 +129,8 @@
           href: platform/activity-log-alerts.md
         - name: Vanligt aviseringsschema
           href: platform/alerts-common-schema.md
+        - name: Åtgärdsregler
+          href: platform/alerts-action-rules.md
     - name: Visualisera data
       href: visualizations.md
     - name: Partnerintegrering
@@ -309,6 +311,29 @@
                   href: app/asp-net.md
                 - name: Statusövervakare
                   href: app/monitor-performance-live-website-now.md
+                - name: Statusövervakare v2
+                  href: app/status-monitor-v2-overview.md
+                  items:
+                    - name: Komma igång
+                      href: app/status-monitor-v2-get-started.md
+                    - name: Detaljerade anvisningar
+                      href: app/status-monitor-v2-detailed-instructions.md
+                    - name: Felsökning och kända problem
+                      href: app/status-monitor-v2-troubleshoot.md
+                    - name: API Disable-InstrumentationEngine
+                      href: app/status-monitor-v2-api-disable-instrumentation-engine.md
+                    - name: API Disable-ApplicationInsightsMonitoring
+                      href: app/status-monitor-v2-api-disable-monitoring.md
+                    - name: API Enable-InstrumentationEngine
+                      href: app/status-monitor-v2-api-enable-instrumentation-engine.md
+                    - name: API Enable-ApplicationInsightsMonitoring
+                      href: app/status-monitor-v2-api-enable-monitoring.md
+                    - name: API Get-ApplicationInsightsMonitoringConfig
+                      href: app/status-monitor-v2-api-get-config.md
+                    - name: API Get-ApplicationInsightsMonitoringStatus
+                      href: app/status-monitor-v2-api-get-status.md
+                    - name: API Set-ApplicationInsightsMonitoringConfig
+                      href: app/status-monitor-v2-api-set-config.md
                 - name: Windows-tjänster
                   href: app/windows-services.md
                 - name: Windows-skrivbordet
@@ -560,6 +585,8 @@
               href: insights/containers.md
             - name: Övervaka Docker-program
               href: app/docker.md
+            - name: Application Insights för Kubernetes
+              href: app/kubernetes.md
         - name: Övervaka resursgrupper
           href: insights/resource-group-insights.md
         - name: Övervaka databaser
@@ -684,6 +711,8 @@
               href: platform/metrics-charts.md
             - name: Exempel på måttdiagram
               href: platform/metric-chart-samples.md
+            - name: Felsöka måttdiagram
+              href: platform/metrics-troubleshoot.md
         - name: Loggar
           items:
             - name: Loggfrågor
