--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -45,6 +45,8 @@
       href: container-instances-region-availability.md
     - name: Relation till dirigeringsverktyg
       href: container-instances-orchestrator-relationship.md
+    - name: Säkerhetsöverväganden
+      href: container-instances-image-security.md
 - name: Instruktionsguider
   items:
     - name: Distribuera
@@ -69,6 +71,8 @@
           href: container-instances-managed-identity.md
         - name: Använda GPU-resurser (förhandsversion)
           href: container-instances-gpu.md
+        - name: Aktivera SSL-slutpunkten
+          href: container-instances-container-group-ssl.md
     - name: Montera datavolymer
       items:
         - name: Azure-filresurs
