--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -34,6 +34,10 @@
           href: assign-access-acm-data.md
         - name: Använda kostnadsaviseringar
           href: cost-mgt-alerts-monitor-usage-spending.md
+        - name: Installera och konfigurera AWS-integrering
+          href: aws-integration-set-up-configure.md
+        - name: Hantera AWS-kostnader och -användning
+          href: aws-integration-manage.md
     - name: Referens
       items:
         - name: REST API för Azure Cost Management
