--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -120,7 +120,9 @@
   items:
     - name: Pipelines och aktiviteter
       href: concepts-pipelines-activities.md
-    - name: Datamängder och länkade tjänster
+    - name: Länkade tjänster
+      href: concepts-linked-services.md
+    - name: Datauppsättningar
       href: concepts-datasets-linked-services.md
     - name: Pipelinekörning och -utlösare
       href: concepts-pipeline-execution-triggers.md
@@ -130,8 +132,6 @@
       items:
         - name: Mappa dataflödeskoncept
           href: concepts-data-flow-overview.md
-        - name: Dataflödesuppsättningar
-          href: concepts-data-flow-datasets.md
         - name: Felsökningsläge
           href: concepts-data-flow-debug-mode.md
         - name: Schemadrift
@@ -216,6 +216,8 @@
           href: connector-couchbase.md
         - name: DB2
           href: connector-db2.md
+        - name: Avgränsat textformat
+          href: format-delimited-text.md
         - name: Drill
           href: connector-drill.md
         - name: Dynamics 365
@@ -283,6 +285,8 @@
           href: connector-oracle-responsys.md
         - name: Oracle Service Cloud
           href: connector-oracle-service-cloud.md
+        - name: Parquet-format
+          href: format-parquet.md
         - name: PayPal
           href: connector-paypal.md
         - name: Phoenix
@@ -582,6 +586,8 @@
       href: 'https://feedback.azure.com/forums/270578-azure-data-factory'
     - name: VANLIGA FRÅGOR OCH SVAR
       href: frequently-asked-questions.md
+    - name: Faktablad
+      href: whitepapers.md
     - name: Översikt
       href: 'https://azure.microsoft.com/roadmap/?tag=data-factory'
     - name: Prissättning
