--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -70,6 +70,8 @@
                   href: ../storage/blobs/data-lake-storage-migrate-on-premises-hdfs-cluster.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
             - name: Felsöka
               items:
+                - name: Data Box-problem
+                  href: data-box-troubleshoot.md
                 - name: Data Box Blob Storage-problem
                   href: data-box-troubleshoot-rest.md
     - name: Data Box Disk
