--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -18,7 +18,7 @@ sections:
       - type: markdown
         text: |-
           > [!IMPORTANT]
-          > Azure Dev Spaces finns för närvarande i en förhandsversion och stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, norra**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner [kompletterande användningsvillkor](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).
+          > Azure Dev Spaces stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, norra**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Azure Dev Spaces stöder användning av [Azure CLI](/cli/azure/install-azure-cli?view=azure-cli-latest) eller [Visual Studio Code](https://code.visualstudio.com/download) med [Azure Dev Spaces-tillägget](https://marketplace.visualstudio.com/items?itemName=azuredevspaces.azds) installerat på Linux, MacOS eller Windows 8 eller senare för att skapa och köra dina program på AKS. Det har också stöd för [Visual Studio 2017](https://aka.ms/vsdownload?utm_source=mscom&utm_campaign=msdocs) med webbutvecklingsarbetsbelastningen och [Visual Studio Tools for Kubernetes](https://aka.ms/get-vsk8stools) installerat på Windows 8 eller senare.
   - title: Komma igång med Azure Dev Spaces
     items:
       - type: paragraph
