--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -80,6 +80,8 @@
               href: storage-create-geo-redundant-storage.md
             - name: 2 – Simulera ett fel med RA-GRS-lagring
               href: storage-simulate-failure-ragrs-account-app.md
+        - name: Kryptera och dekryptera blobar med Azure Key Vault
+          href: storage-encrypt-decrypt-blobs-key-vault.md
         - name: Söka efter ostrukturerade data
           href: storage-unstructured-search.md
     - name: Exempel
@@ -98,6 +100,10 @@
           href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Säkerhet
           items:
+            - name: Säkerhetsöversikt
+              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Kryptering av lagringstjänst
+              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Auktorisering
               href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
               items:
@@ -109,24 +115,10 @@
                   href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Anonym åtkomst till blobar
                   href: storage-manage-access-to-resources.md
-            - name: Säkerhetsguide
-              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Konfigurera brandväggar och virtuella nätverk
-              href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Kryptering för vilande data
-              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Kryptering i vila med kundnycklar
-              href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Använda Azure CDN för att få åtkomst till blobar med anpassade domäner över https
-              href: storage-https-custom-domain-cdn.md
             - name: Blobar som inte kan ändras
               href: storage-blob-immutable-storage.md
             - name: Advanced Threat Protection
               href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Aktivera säker TLS för Azure Storage-klient
-              href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Kräv säker överföring
-              href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Vanliga säkerhetsattribut i Azure
               href: ../common/storage-security-attributes.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Dataredundans
@@ -288,7 +280,7 @@
           href: storage-blob-pageblob-overview.md
     - name: Gör så här för att
       items:
-        - name: Lagringskonton
+        - name: Hantera lagringskonton
           items:
             - name: Skapa ett blockblobslagringskonto
               href: storage-blob-create-account-block-blob.md
@@ -296,7 +288,7 @@
               href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Uppgradera ett lagringskonto
               href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Skydda
+        - name: Skydda blobdata
           items:
             - name: Bevilja åtkomst till blobdata
               items:
@@ -304,16 +296,16 @@
                   items:
                     - name: Portalen
                       href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: CLI eller PowerShell
+                    - name: PowerShell eller Azure CLI
                       href: ../common/storage-auth-aad-script.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Hantera åtkomstbehörighet med RBAC
                   items:
                     - name: Portalen
                       href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: CLI
-                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: PowerShell
                       href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                    - name: Azure CLI
+                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Autentisera med Azure AD
                   items:
                     - name: Autentisera med en hanterad identitet
@@ -323,14 +315,18 @@
                 - name: Auktorisera med delad nyckel
                   items:
                     - name: Konfigurera anslutningssträngar
-                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: Använda Azure Storage REST API
                       href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Konfigurera brandväggar och virtuella nätverk
-              href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: Kryptera och dekryptera blobar med Azure Key Vault
-              href: storage-encrypt-decrypt-blobs-key-vault.md
-            - name: Kryptering av klientsidan
+            - name: Konfigurera kundhanterade nycklar för tjänstkryptering
+              items:
+                - name: Portalen
+                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure CLI
+                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Konfigurera kryptering på klientsidan
               items:
                 - name: .NET
                   href: ../common/storage-client-side-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -338,10 +334,14 @@
                   href: ../common/storage-client-side-encryption-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Python
                   href: ../common/storage-client-side-encryption-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Aktivera säker TLS för Azure Storage-klient
-              href: ../common/storage-security-tls.md
-            - name: Kräv säker överföring
-              href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Konfigurera nätverkssäkerhet
+              items:
+                - name: Konfigurera brandväggar och virtuella nätverk
+                  href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Kräv säker överföring
+                  href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Aktivera Transport Layer Security
+                  href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Haveriberedskap
           items:
             - name: Initiera kontoredundans
@@ -354,6 +354,8 @@
           href: storage-properties-metadata.md
         - name: Var värd för en statisk webbplats
           href: storage-blob-static-website.md
+        - name: Mappa Azure CDN till en anpassad domän för åtkomst via HTTPS
+          href: storage-https-custom-domain-cdn.md
         - name: Konfigurera ett anpassat domännamn
           href: storage-custom-domain-name.md
         - name: Dirigera händelser till en anpassad slutpunkt
@@ -557,10 +559,8 @@
           href: data-lake-storage-best-practices.md
         - name: Säkerhet
           items:
-            - name: Säkerhetsguide för analys av stordata
-              href: ../common/storage-data-lake-storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Azure Storage-kryptering
-              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Översikt över Storage-säkerhet
+              href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Åtkomstkontroll
               href: data-lake-storage-access-control.md
     - name: Gör så här för att
@@ -575,16 +575,22 @@
           items:
             - name: Konfigurera brandväggar och virtuella nätverk
               href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Hantera anpassade nycklar för Azure Storage-kryptering
-              href: ../common/storage-service-encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Konfigurera kundhanterade nycklar för tjänstkryptering
+              items:
+                - name: Portalen
+                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure CLI
+                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Hantera åtkomstbehörighet med RBAC
               items:
                 - name: Portalen
                   href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: CLI
-                  href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: PowerShell
                   href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure CLI
+                  href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Ange behörighet för filer och kataloger
               href: ../blobs/data-lake-storage-how-to-set-permissions-storage-explorer.md
         - name: Integrera med Azure-tjänster
