--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -44,6 +44,18 @@
       href: delegated-access-virtual-desktop.md
     - name: Belastningsutjämningsmetoder för värdpool
       href: host-pool-load-balancing.md
+- name: Felsöka
+  items:
+    - name: 'Översikt, feedback och support för felsökning'
+      href: troubleshoot-set-up-overview.md
+    - name: Skapa klient- och värdpool
+      href: troubleshoot-set-up-issues.md
+    - name: Session för konfiguration av virtuell värddator
+      href: troubleshoot-vm-configuration.md
+    - name: Anslutningar för fjärrskrivbordsklienten
+      href: troubleshoot-client-connection.md
+    - name: Windows Virtual Desktop PowerShell
+      href: troubleshoot-powershell.md
 - name: Referens
   items:
     - name: PowerShell
